fixed overflow on mobile

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ body
 	margin-block: 4rem;
 	background-color: aliceblue;
 	/* place-items: center; */
+	overflow-wrap: anywhere;
 	font-family: "Nunito Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -124,6 +125,7 @@ h2
 	display: grid;
 	grid-template-columns: repeat(auto-fit, 5ch);
 	place-items: center;
+	text-align: center;
 }
 
 #container
@@ -136,6 +138,7 @@ h2
 	position: fixed;
 	right: 10%;
 	bottom: 2rem;
+	z-index: 1;
 }
 
 a
@@ -143,6 +146,7 @@ a
 	/* display: inline-block; */
 	color: #b084f7;
 	text-decoration: none;
+	width: 3rem;
 }
 
 a:visited
@@ -150,12 +154,16 @@ a:visited
 	color: lightsalmon;
 }
 
-
 p
 {
 	text-align: justify;
 	color: #333;
 	font-weight: 500;
+}
+
+::selection
+{
+	background-color: #b084f76b;
 }
 
 #loading
